--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "postscriptsnippets",
-  "displayName": "Postscript Snippets",
+  "displayName": "PostScript Snippets",
   "publisher": "yingquelou",
-  "description": "postscript ghostscript optscript",
-  "version": "0.0.8",
+  "description": "PostScript GhostScript OptScript",
+  "version": "0.0.9",
   "engines": {
     "vscode": "^1.73.0"
   },
@@ -19,9 +19,9 @@
           ".eps"
         ],
         "aliases": [
-          "postscript",
-          "ghostscript",
-          "optscript"
+          "PostScript",
+          "GhostScript",
+          "OptScript"
         ],
         "configuration": "./language-configuration.json"
       }
