--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,9 +1,14 @@
 .vscode/**
 .vscode-test/**
 .gitignore
-vsc-extension-quickstart.md
-Operators/*
 *.txt
-!name.txt
-node_modules
 src
+*.ps1
+dist/*.s.js
+dist/*.js.map
+*.md
+*.bat
+tsconfig.json
+ps/*.ps
+!ps/debugger.ps
+!README.md
