--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,14 @@
 {
 	"compilerOptions": {
 		"module": "commonjs",
-		"target": "ES2020",
+		"target": "es2015",
 		"outDir": "dist",
 		"lib": [
-			"WebWorker",
-			"ES2020"
+			"ES2015"
 		],
 		"sourceMap": true,
 		"rootDir": "src",
-		"strict": true,   
+		"strict": true,
 		
 		"noImplicitAny": false,
 		"removeComments": false,
