refactor: update project structure and enhance build process
- Refined .gitignore and .vscodeignore for better file management.
- Updated CHANGELOG.md with new version details and features.
- Added new TypeScript configuration for scripts.
- Introduced esbuild for improved script building and added new build scripts.
- Implemented a new snippets generator for PostScript snippets.
- Enhanced debugging capabilities and language server integration.
- Removed obsolete postscriptDocumentSymbolProvider.ts file.

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,14 +1,21 @@
 .vscode/**
 .vscode-test/**
+scripts/**
 .gitignore
 *.txt
 src
 *.ps1
 dist/*.s.js
+dist/scripts/**
 dist/*.js.map
 *.md
 *.bat
 tsconfig.json
+tsconfig.scripts.json
 ps/*.s.ps
 snippets
 !README.md
+!CHANGELOG.md
+node_modules
+package-lock.json
+*.vsix
