--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "PostScript Programming Language",
   "publisher": "yingquelou",
   "description": "PostScript GhostScript",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "engines": {
     "vscode": "^1.70.3"
   },
@@ -214,24 +214,31 @@
     "url": "https://github.com/yingquelou/Postscript-Snippets.git"
   },
   "scripts": {
+    "build:scripts": "esbuild scripts/snippetsGenerator.s.ts scripts/esbuild.ts --bundle --platform=node --outdir=dist/scripts --outbase=scripts --format=cjs --external:esbuild",
+    "snippets": "node dist/scripts/snippetsGenerator.s.js",
+    "bundle": "node dist/scripts/esbuild.js",
+    "build": "npm run build:scripts && npm run snippets && npm run bundle",
+    "watch": "npm run build:scripts && node dist/scripts/esbuild.js --watch",
+    "typecheck": "tsc --noEmit -p . && tsc --noEmit -p tsconfig.scripts.json",
+    "prepackage": "npm run build",
     "prepublish": "npm run package",
-    "prepackage": "npm run compile && npm run snippets",
-    "compile": "tsc -p ./",
-    "watch": "tsc -watch -p ./",
-    "publish": "vsce publish",
     "package": "vsce package",
-    "snippets": "node ./dist/snippetsGenerator.s.js"
+    "publish": "vsce publish"
   },
   "dependencies": {
     "chevrotain": "10.5.0",
     "@vscode/debugadapter": "^1.68.0",
-    "@vscode/debugprotocol": "^1.68.0"
+    "@vscode/debugprotocol": "^1.68.0",
+    "vscode-languageclient": "^8.0.0",
+    "vscode-languageserver": "^8.0.0",
+    "vscode-languageserver-textdocument": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
     "@types/vscode": "^1.66.0",
     "@vscode/vsce": "^2.32.0",
     "marked": "^17.0.1",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "esbuild": "^0.18.17"
   }
 }
