--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,22 @@
 {
-	"compilerOptions": {
-		"module": "commonjs",
-		"target": "es2015",
-		"outDir": "dist",
-		"lib": [
-			"ES2015"
-		],
-		"sourceMap": false,
-		"rootDir": "src",
-		"strict": true,
-		
-		"noImplicitAny": false,
-		"removeComments": true,
-		"noUnusedLocals": false,
-		"noImplicitThis": true,
-		"inlineSourceMap": false,
-		"preserveConstEnums": true,
-		"strictNullChecks": true,
-		"noUnusedParameters": false
-	},
-	"exclude": [
-		"node_modules"
-	]
+  "compilerOptions": {
+    "module": "commonjs",
+    "target": "es2015",
+    "outDir": "dist",
+    "lib": ["ES2015"],
+    "skipLibCheck": true,
+    "sourceMap": false,
+    "rootDir": "src",
+    "strict": true,
+    "noImplicitAny": false,
+    "removeComments": true,
+    "noUnusedLocals": false,
+    "noImplicitThis": true,
+    "inlineSourceMap": false,
+    "preserveConstEnums": true,
+    "strictNullChecks": true,
+    "noUnusedParameters": false
+  },
+  "include": ["src"],
+  "exclude": ["node_modules"]
 }
